(style/light and dark mode) fix position text and fix margin.

--- a/styles/base-homescreen-backup.css
+++ b/styles/base-homescreen-backup.css
@@ -800,7 +800,7 @@ body {
   height: 36.6rem;
   position: absolute;
   left: 6.9rem;
-  top: 12rem;
+  top: 8rem;
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -1058,7 +1058,7 @@ body {
   align-items: center;
 }
 .base-homescreen-backup-w1s .auto-group-dgip-FHT .home-uDK .text-uW9 .auto-group-oucs-Ned .item--7s7 {
-  margin-right: 7.4rem;
+  margin-right: 2.4rem;
   text-align: right;
   font-size: 6.4rem;
   font-weight: 700;
@@ -1085,7 +1085,7 @@ body {
   height: 7rem;
   position: absolute;
   left: 0;
-  top: 50.2rem;
+  top: 51.2rem;
   display: flex;
   align-items: center;
   border-radius: 7.8rem;
@@ -1131,7 +1131,7 @@ body {
   height: 5rem;
   position: absolute;
   left: 0.1rem;
-  top: 58.5rem;
+  top: 62.5rem;
   display: flex;
   column-gap: 2.5rem;
   align-items: center;
@@ -1607,7 +1607,7 @@ body {
 .base-homescreen-backup-w1s .contact-zCh .text-BTX .write-your-contact-data-and-well-get-in-touch-with-you-JY9 {
   margin-bottom: 1.8rem;
   max-width: 39.2rem;
-  font-size: 5rem;
+  font-size: 4.7rem;
   font-weight: 700;
   line-height: 1.2228989864;
   letter-spacing: -0.075rem;
