--- a/styles/darkmode-homescreen.css
+++ b/styles/darkmode-homescreen.css
@@ -799,7 +799,7 @@ body {
   height: 36.6rem;
   position: absolute;
   left: 6.9rem;
-  top: 12rem;
+  top: 8rem;
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -1057,7 +1057,7 @@ body {
   align-items: center;
 }
 .darkmode-homescreen-L9X .auto-group-yiaw-eAD .home-aEd .text-P5b .auto-group-tm63-3vq .item--o9K {
-  margin-right: 7.4rem;
+  margin-right: 2.4rem;
   text-align: right;
   font-size: 6.4rem;
   font-weight: 700;
@@ -1084,7 +1084,7 @@ body {
   height: 7rem;
   position: absolute;
   left: 0;
-  top: 44.2rem;
+  top: 51.2rem;
   display: flex;
   align-items: center;
   border-radius: 7.8rem;
@@ -1130,7 +1130,7 @@ body {
   height: 5rem;
   position: absolute;
   left: 0.1rem;
-  top: 58.5rem;
+  top: 62.5rem;
   display: flex;
   column-gap: 2.5rem;
   align-items: center;
@@ -1606,7 +1606,7 @@ body {
 .darkmode-homescreen-L9X .contact-E49 .text-ckq .write-your-contact-data-and-well-get-in-touch-with-you-YuP {
   margin-bottom: 1.8rem;
   max-width: 39.2rem;
-  font-size: 5rem;
+  font-size: 4.7rem;
   font-weight: 700;
   line-height: 1.2228989864;
   letter-spacing: -0.075rem;
